--- a/pom.xml
+++ b/pom.xml
@@ -299,7 +299,7 @@
         <org.eclipse.osgi.services.version>3.5.100.v20160504-1419</org.eclipse.osgi.services.version>
         <org.ops4j.pax.tipi.version>1.3.0.1</org.ops4j.pax.tipi.version>
         <org.wso2.siddhi.feature.version>2.0.11</org.wso2.siddhi.feature.version>
-        <osgi.test.util.version>5.2.0-SNAPSHOT</osgi.test.util.version>
+        <osgi.test.util.version>5.1.1</osgi.test.util.version>
         <commons.io.version>2.5</commons.io.version>
         <org.apache.commons.version>1.3.2</org.apache.commons.version>
         <siddhi.io.http.version>4.0.0-SNAPSHOT</siddhi.io.http.version>
@@ -339,6 +339,9 @@
         <maven.compiler.plugin.source.version>1.8</maven.compiler.plugin.source.version>
         <maven.compiler.plugin.target.version>1.8</maven.compiler.plugin.target.version>
         <carbon.feature.plugin.version>3.1.0</carbon.feature.plugin.version>
+        <maven.project.info.reports.plugin.version>2.4</maven.project.info.reports.plugin.version>
+        <antlr4.maven.plugin.version>4.2.2</antlr4.maven.plugin.version>
+        <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
     </properties>
     <scm>
         <connection>scm:git:https://github.com/wso2-extensions/siddhi-io-http.git</connection>
@@ -414,12 +417,12 @@
                 <plugin>
                     <groupId>org.antlr</groupId>
                     <artifactId>antlr4-maven-plugin</artifactId>
-                    <version>4.2.2</version>
+                    <version>${antlr4.maven.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>2.10</version>
+                    <version>${maven.dependency.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -447,7 +450,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>2.4</version>
+                    <version>${maven.project.info.reports.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
