Pom version change

--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
             <dependency>
                 <groupId>org.wso2.siddhi</groupId>
                 <artifactId>siddhi-query-compiler</artifactId>
-                <version>${project.version}</version>
+                <version>${siddhi.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.messaging</groupId>
