[maven-release-plugin] prepare release v1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.wso2</groupId>
         <artifactId>wso2</artifactId>
@@ -30,7 +28,7 @@
     </modules>
     <groupId>org.wso2.extension.siddhi.io.http</groupId>
     <artifactId>siddhi-io-http-parent</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>WSO2 Siddhi IO Extension - HTTP IO Aggregator Pom</name>
     <url>http://wso2.org</url>
@@ -348,7 +346,7 @@
         <url>https://github.com/wso2-extensions/siddhi-io-http.git</url>
         <developerConnection>scm:git:https://github.com/wso2-extensions/siddhi-io-http.git
         </developerConnection>
-        <tag>HEAD</tag>
+        <tag>v1.0.0</tag>
     </scm>
     <build>
         <extensions>
