--- a/tests/osgi-tests/src/test/resources/netty/deployment.yaml
+++ b/tests/osgi-tests/src/test/resources/netty/deployment.yaml
@@ -50,6 +50,8 @@ siddhi:
           latency.metrics.enabled: true
           server.bootstrap.socket.timeout: 15
           client.bootstrap.socket.timeout: 15
+          server.bootstrap.boss.group.size: 4
+          server.bootstrap.worker.group.size: 8
           default.host: 0.0.0.0
           default.port: 9763
           default.scheme: http
@@ -59,7 +61,7 @@ siddhi:
           https.host: 0.0.0.0
           https.port: 9763
           https.scheme: https
-          https.keystore.file: ${carbon.home}/conf/security/wso2carbon.jks
+          https.keystore.file: ${carbon.home}/resources/security/wso2carbon.jks
           https.keyStore.pass: wso2carbon
           https.certPass: wso2carbon
     -
@@ -74,6 +76,8 @@ siddhi:
           latency.metrics.enabled: true
           server.bootstrap.socket.timeout: 15
           client.bootstrap.socket.timeout: 15
+          server.bootstrap.boss.group.size: 4
+          server.bootstrap.worker.group.size: 8
           default.host: 0.0.0.0
           default.port: 9763
           default.scheme: http
@@ -83,7 +87,7 @@ siddhi:
           https.host: 0.0.0.0
           https.port: 9763
           https.scheme: https
-          https.truststore.file: ${carbon.home}/conf/security/client-truststore.jks
+          https.truststore.file: ${carbon.home}/resources/security/client-truststore.jks
           https.truststore.pass: wso2carbon
           https.certPass: wso2carbon
     -
