--- a/pom.xml
+++ b/pom.xml
@@ -195,19 +195,13 @@
             <dependency>
                 <groupId>org.ops4j.pax.exam</groupId>
                 <artifactId>pax-exam-junit4</artifactId>
-                <version>3.6.0</version>
+                <version>${pax.exam.junit4.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.ops4j.pax.exam</groupId>
                 <artifactId>pax-exam-spi</artifactId>
-                <version>4.10.0</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.ops4j.pax.exam</groupId>
-                <artifactId>pax-exam-spi</artifactId>
-                <version>4.10.0</version>
+                <version>${pax.exam.spi.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -312,6 +306,8 @@
         </dependencies>
     </dependencyManagement>
     <properties>
+        <pax.exam.junit4.version>3.6.0</pax.exam.junit4.version>
+        <pax.exam.spi.version>4.10.0</pax.exam.spi.version>
         <commons.collections.version>3.1</commons.collections.version>
         <org.eclipse.osgi.services.version>3.5.100.v20160504-1419</org.eclipse.osgi.services.version>
         <org.ops4j.pax.tipi.version>1.3.0.1</org.ops4j.pax.tipi.version>
