--- a/pom.xml
+++ b/pom.xml
@@ -78,19 +78,19 @@
             <dependency>
                 <groupId>org.wso2.extension.siddhi.map.xml</groupId>
                 <artifactId>siddhi-map-xml</artifactId>
-                <version>4.0.0-M8</version>
+                <version>${siddhi.mapper.xml.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.wso2.extension.siddhi.map.json</groupId>
                 <artifactId>siddhi-map-json</artifactId>
-                <version>4.0.2</version>
+                <version>${siddhi.mapper.json.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.wso2.extension.siddhi.map.text</groupId>
                 <artifactId>siddhi-map-text</artifactId>
-                <version>1.0.1</version>
+                <version>${siddhi.mapper.text.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -301,7 +301,9 @@
         </dependencies>
     </dependencyManagement>
     <properties>
-        <siddhi.extension.mapper.version>4.0.0-M13</siddhi.extension.mapper.version>
+        <siddhi.mapper.json.version>4.0.2</siddhi.mapper.json.version>
+        <siddhi.mapper.text.version>1.0.1</siddhi.mapper.text.version>
+        <siddhi.mapper.xml.version>4.0.0-M8</siddhi.mapper.xml.version>
         <siddhi.version>4.0.0-M21</siddhi.version>
         <pax.exam.spi.version>4.10.0</pax.exam.spi.version>
         <commons.collections.version>3.1</commons.collections.version>
