--- a/pom.xml
+++ b/pom.xml
@@ -93,12 +93,12 @@
                 <version>${siddhi.mapper.text.version}</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <groupId>org.wso2.siddhi</groupId>
-                <artifactId>siddhi-extension-text-input-mapper</artifactId>
-                <version>${siddhi.extension.mapper.version}</version>
-                <scope>test</scope>
-            </dependency>
+            <!--<dependency>-->
+                <!--<groupId>org.wso2.siddhi</groupId>-->
+                <!--<artifactId>siddhi-extension-text-input-mapper</artifactId>-->
+                <!--<version>${siddhi.extension.mapper.version}</version>-->
+                <!--<scope>test</scope>-->
+            <!--</dependency>-->
             <!--Carbon Analytic Dependencies-->
             <dependency>
                 <groupId>org.wso2.carbon.analytics</groupId>
@@ -309,7 +309,7 @@
         <commons.collections.version>3.1</commons.collections.version>
         <org.eclipse.osgi.services.version>3.5.100.v20160504-1419</org.eclipse.osgi.services.version>
         <org.ops4j.pax.tipi.version>1.3.0.1</org.ops4j.pax.tipi.version>
-        <org.wso2.siddhi.feature.version>2.0.53</org.wso2.siddhi.feature.version>
+        <org.wso2.siddhi.feature.version>2.0.54</org.wso2.siddhi.feature.version>
         <osgi.test.util.version>5.1.1</osgi.test.util.version>
         <commons.io.version>2.5</commons.io.version>
         <org.apache.commons.version>1.3.2</org.apache.commons.version>
@@ -330,7 +330,7 @@
         <pax.url.aether.version>1.6.0</pax.url.aether.version>
         <maven.paxexam.plugin.version>1.2.4</maven.paxexam.plugin.version>
         <carbon.kernel.version>5.2.0-m3</carbon.kernel.version>
-        <carbon.transport.version>4.4.4</carbon.transport.version>
+        <carbon.transport.version>4.4.15</carbon.transport.version>
         <org.wso2.carbon.messaging.version>2.3.1</org.wso2.carbon.messaging.version>
         <commons-io.version>2.4.0.wso2v1</commons-io.version>
         <json.smart.version>2.1.0.wso2v1</json.smart.version>
