Upgrade siddhi verstion and add jacoco test coversge

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,5 +13,6 @@ pages:
 - Welcome to WSO2 Siddhi IO TCP: index.md
 - License: license.md
 - API Docs:
+  - 1.0.2-SNAPSHOT: api/1.0.2-SNAPSHOT.md
   - 1.0.1-SNAPSHOT: api/1.0.1-SNAPSHOT.md
 theme: material
