--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -31,6 +31,7 @@
     <modules>
         <module>distribution</module>
         <module>osgi-tests</module>
+        <module>coverage-report</module>
     </modules>
 
     <properties>
