Upgrade siddhi version and jacoco-coverage report location

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <modules>
         <module>component</module>
         <module>tests</module>
+        <module>coverage-report</module>
     </modules>
     <groupId>org.wso2.extension.siddhi.io.http</groupId>
     <artifactId>siddhi-io-http-parent</artifactId>
@@ -296,7 +297,7 @@
         <siddhi.mapper.json.version>4.0.3</siddhi.mapper.json.version>
         <siddhi.mapper.text.version>1.0.1</siddhi.mapper.text.version>
         <siddhi.mapper.xml.version>4.0.0-M8</siddhi.mapper.xml.version>
-        <siddhi.version>4.0.0-M52</siddhi.version>
+        <siddhi.version>4.0.0-M61</siddhi.version>
         <pax.exam.spi.version>4.10.0</pax.exam.spi.version>
         <commons.collections.version>3.1</commons.collections.version>
         <org.eclipse.osgi.services.version>3.5.100.v20160504-1419</org.eclipse.osgi.services.version>
