--- a/coverage-report/pom.xml
+++ b/coverage-report/pom.xml
@@ -18,15 +18,8 @@
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <!--<parent>-->
-        <!--<groupId>org.wso2.carbon.security.caas</groupId>-->
-        <!--<artifactId>carbon-security-caas-tests</artifactId>-->
-        <!--<version>1.0.2-SNAPSHOT</version>-->
-        <!--<relativePath>../pom.xml</relativePath>-->
-    <!--</parent>-->
     <parent>
-        <artifactId>siddhi-io-http-tests</artifactId>
+        <artifactId>siddhi-io-http-parent</artifactId>
         <groupId>org.wso2.extension.siddhi.io.http</groupId>
         <version>1.0.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
@@ -36,7 +29,6 @@
     <name>WSO2 Siddhi IO HTTP - Test Coverage</name>
     <description>Coverage reports Siddhi IO HTTP module</description>
     <url>http://wso2.com</url>
-
 
     <dependencies>
         <dependency>
@@ -94,22 +86,22 @@
                                         </taskdef>
                                         <jacoco:report>
                                             <executiondata>
-                                                <fileset dir="../../component/target">
+                                                <fileset dir="../component/target">
                                                     <include name="jacoco.exec" />
                                                 </fileset>
-                                                <fileset dir="../osgi-tests/target">
+                                                <fileset dir="../tests/osgi-tests/target">
                                                     <include name="jacoco.exec" />
                                                 </fileset>
                                             </executiondata>
                                             <structure name="Siddhi io HTTP Tests">
                                                 <classfiles>
-                                                    <fileset dir="../../component/target/classes">
+                                                    <fileset dir="../component/target/classes">
                                                         <exclude name="**/*Constants.class" />
                                                         <exclude name="**/*Exception.class" />
                                                     </fileset>
                                                 </classfiles>
                                                 <sourcefiles encoding="UTF-8">
-                                                    <fileset dir="../../component/src/main/java" />
+                                                    <fileset dir="../component/src/main/java" />
                                                 </sourcefiles>
                                             </structure>
                                             <html destdir="${project.build.directory}/site/jacoco" />
